# redditharbor-graph-enhanced

./: .gitignore  CERTIFICATE.txt  CLAUDE.md  DEPLOYMENT.md  README.md  ai-rulez.yaml  docker-compose.yml  lint.sh  pyproject.toml  ruff.toml
agent_tools/: README.md  __init__.py  enhanced_hybrid_client.py  hybrid_crawler.py  interactive_analyzer.py  jina_hybrid_client.py  jina_mcp_client_simple.py  jina_reader_client.py  llm_profiler.py  llm_profiler_enhanced.py  market_data_validator.py  market_validation_persistence.py  monetization_analyzer_factory.py  monetization_llm_analyzer.py  opportunity_analyzer_agent.py
analysis/: COMPREHENSIVE_SCHEMA_AUDIT_REPORT.md  SCHEMA_AUDIT_DATA.json  SCHEMA_CLAIMS_AUDIT_REPORT.md  schema-documentation-claims-audit.json
api/: Dockerfile  main.py  requirements.txt
archive/: README.md  script_organization_report.md
backups/: app_opportunities_backup_20251118_074244_backup_20251118_094716.json  app_opportunities_backup_20251118_074302_backup_20251118_094716.json  app_opportunities_backup_20251118_074344_backup_20251118_094716.json  app_opportunities_backup_20251118_094716.json  comments_backup_20251118_074244_backup_20251118_094716.json  comments_backup_20251118_074302_backup_20251118_094716.json  comments_backup_20251118_074344_backup_20251118_094716.json  market_validations_backup_20251118_074244_backup_20251118_094716.json  market_validations_backup_20251118_074302_backup_20251118_094716.json  market_validations_backup_20251118_074344_backup_20251118_094716.json  opportunities_backup_20251118_074244_backup_20251118_094716.json  opportunities_backup_20251118_074302_backup_20251118_094716.json  opportunities_backup_20251118_074344_backup_20251118_094716.json  opportunities_backup_20251118_094716.json  opportunities_unified_backup_20251118_094715.json  opportunity_assessments_backup_20251118_094715.json  opportunity_scores_backup_20251118_074244_backup_20251118_094716.json  opportunity_scores_backup_20251118_074302_backup_20251118_094716.json  opportunity_scores_backup_20251118_074344_backup_20251118_094716.json  redditors_backup_20251118_074244_backup_20251118_094716.json  redditors_backup_20251118_074302_backup_20251118_094716.json  redditors_backup_20251118_074344_backup_20251118_094716.json  score_components_backup_20251118_074244_backup_20251118_094716.json  score_components_backup_20251118_074302_backup_20251118_094716.json  score_components_backup_20251118_074344_backup_20251118_094716.json  submissions_backup_20251118_074244_backup_20251118_094716.json  submissions_backup_20251118_074302_backup_20251118_094716.json  submissions_backup_20251118_074344_backup_20251118_094716.json  subreddits_backup_20251118_074244_backup_20251118_094716.json  subreddits_backup_20251118_074302_backup_20251118_094716.json  subreddits_backup_20251118_074344_backup_20251118_094716.json  workflow_results_backup_20251118_074244_backup_20251118_094716.json  workflow_results_backup_20251118_074302_backup_20251118_094716.json  workflow_results_backup_20251118_074344_backup_20251118_094716.json  workflow_results_backup_20251118_094716.json
config/: __init__.py  dlt.toml  dlt_settings.py  settings.py
core/: __init__.py  activity_validation.py  collection.py  cost_tracking_error_handler.py  deduplication.py  dlt_app_opportunities.py  dlt_collection.py  dlt_cost_tracking.py  dlt_reddit_source.py  http_client_config.py  lead_extractor.py  setup.py  templates.py  trust_layer.py
docs/: README.md  dlt-primary-key-refactoring.md  trust-validation-decoupling.md
error_log/: t3_1ogzyrk.html
examples/: graph_analysis_example.py
marimo_notebooks/: README.md  __init__.py  config.py  main_dashboard.py  opportunity_dashboard.py  opportunity_dashboard_clean.py  opportunity_dashboard_final.py  opportunity_dashboard_fixed.py  opportunity_dashboard_reactive.py  opportunity_dashboard_simple.py  redditharbor_demo.py  ultra_rare_dashboard.py  utils.py
migrations/: 001_add_deduplication_schema.sql  001_add_market_validation_fields.sql  002_add_comprehensive_enrichment_fields.sql
schema_dumps/: DLT_TRUST_PIPELINE_SUCCESS_SUMMARY_20251117.md  README.md  comprehensive_schema_dump_20251120_180219.sql  current_indexes_list_20251118_103425.txt  current_table_structure_20251118_103425.txt  current_tables_list_20251118_103425.txt  current_views_list_20251118_103425.txt  migration_summary_20251114_234258.txt  schema_dump_summary_20251118_103425.md  update_with_docker.sh  (+1 more)
scripts/: README.md
(+913 files in other folders)
