[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["core", "config", "agent_tools"]

[project]
name = "redditharbor"
version = "1.0.0"
description = "RedditHarbor is a comprehensive Reddit data collection and research platform"
authors = [
    {name = "RedditHarbor Team", email = "team@redditharbor.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["reddit", "data", "collection", "research", "dlt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies
dependencies = [
    # Reddit API (usingpraw only, asyncpraw conflicts with crawl4ai)
    "praw>=7.6.0",
    # Data processing
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    # Database and storage
    "supabase>=1.0.0",
    "psycopg2-binary>=2.9.0",
    # Privacy and PII handling
    "spacy>=3.4.0",
    # Web requests and scraping
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    # JSON repair for LLM responses
    "json-repair>=0.24.0",
    # LLM unified API and cost tracking
    "litellm>=1.45.0",
    # Data validation
    "pydantic>=1.10.0",
    "marshmallow>=3.17.0",
    # Configuration
    "python-dotenv>=0.19.0",
    # Logging and monitoring
    "structlog>=22.1.0",
    # Testing (dev dependencies will be in separate group)
    "dspy-ai>=2.5.0",
    "dlt>=1.18.0",
    # Agno multi-agent framework
    "agno>=0.1.0",
    # AgentOps cost tracking
    "agentops>=0.2.0",
    "mcp>=1.21.2",
    "asyncpg>=0.30.0",
    "psutil>=7.0.0",
    "redis>=7.0.1",
]

# Optional dependencies
[project.optional-dependencies]
dlt = [
    "dlt[postgres]>=1.15.0",
    "pendulum>=2.1.0",
]

orchestration = [
    "doit>=0.36.0",
]

prompt-optimization = [
    "dspy-ai>=2.5.0",
    # Note: Promptfoo is a Node.js tool, install via: npm install -g promptfoo
]

# Async Reddit API (conflicts with crawl4ai)
async-reddit = [
    "asyncpraw>=7.6.0",
]

# Web crawling with Crawl4AI (conflicts with asyncpraw)
web-crawler = [
    "crawl4ai>=0.3.73",
    "aiosqlite>=0.20.0",  # Crawl4AI requires newer aiosqlite
]

# Note: asyncpraw and crawl4ai cannot be installed together due to aiosqlite conflicts
# Install separately:
# - For async Reddit: uv sync --extra async-reddit
# - For web crawling: uv sync --extra web-crawler

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.0.261",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/redditharbor/redditharbor"
Documentation = "https://redditharbor.readthedocs.io"
Repository = "https://github.com/redditharbor/redditharbor"
"Bug Tracker" = "https://github.com/redditharbor/redditharbor/issues"

[project.scripts]
redditharbor = "core.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

# Tool configurations
[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403"]
"config/__init__.py" = ["F401", "F403", "F405"]
"scripts/*" = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "praw.*",
    "supabase.*",
    "spacy.*",
    "dlt.*",
    "pendulum.*",
]
ignore_missing_imports = true
